[package]
name = "mod_cod_barras"
version = "0.0.92"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "12.0.0"
color-print = "0.3.5"
chrono = "0.4.31"
crossterm = "0.27.0"
clipboard = "0.5.0"
